--- a/spring_advanced/build.gradle
+++ b/spring_advanced/build.gradle
@@ -25,6 +25,17 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation('io.jsonwebtoken:jjwt:0.2')
+
+	// retrofit
+	implementation 'com.squareup.retrofit2:retrofit:2.7.0'
+	implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
+
+	// Junit
+	//testImplementation("org.junit.jupiter:junit-jupiter-api:5.0.0")
+	//testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
+	// to run JUnit 3/4 tests:
+	//testImplementation("junit:junit:4.12")
+	//testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0")
 }
 
 tasks.named('test') {
