--- a/spring_advanced/build.gradle
+++ b/spring_advanced/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	implementation 'com.squareup.retrofit2:retrofit:2.7.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
 
+	//test with h2 database
+	runtimeOnly 'com.h2database:h2'
+
 	// Junit
 	//testImplementation("org.junit.jupiter:junit-jupiter-api:5.0.0")
 	//testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
