--- a/spring_advanced/build.gradle
+++ b/spring_advanced/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	testImplementation 'junit:junit:4.13.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -34,11 +35,9 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 
 	// Junit
-	//testImplementation("org.junit.jupiter:junit-jupiter-api:5.0.0")
-	//testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0")
+
 	// to run JUnit 3/4 tests:
-	//testImplementation("junit:junit:4.12")
-	//testRuntime("org.junit.vintage:junit-vintage-engine:4.12.0")
+
 }
 
 tasks.named('test') {
