--- a/spring_advanced/src/test/resources/application.properties
+++ b/spring_advanced/src/test/resources/application.properties
@@ -1,5 +1,4 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
