--- a/spring_advanced/build.gradle
+++ b/spring_advanced/build.gradle
@@ -34,10 +34,8 @@ dependencies {
 	//test with h2 database
 	runtimeOnly 'com.h2database:h2'
 
-	// Junit
-
-	// to run JUnit 3/4 tests:
-
+	// ModelMapper
+	implementation 'org.modelmapper:modelmapper:2.3.0'
 }
 
 tasks.named('test') {
