clean code from unused lines

--- a/spring_advanced/build.gradle
+++ b/spring_advanced/build.gradle
@@ -17,14 +17,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'junit:junit:4.13.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//spring security
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation('io.jsonwebtoken:jjwt:0.2')
 
 	// retrofit
@@ -33,6 +33,7 @@ dependencies {
 
 	//test with h2 database
 	runtimeOnly 'com.h2database:h2'
+	testImplementation 'junit:junit:4.13.1'
 
 	// ModelMapper
 	implementation 'org.modelmapper:modelmapper:2.3.0'
